--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
     <body>
         <h1>Hello, world</h1>hr>
-        <p>this is home page test</p>
+        <p>test this is a home page</p>
     </body>
 </html>
